--- a/security-checkin-frontend/src/global.css
+++ b/security-checkin-frontend/src/global.css
@@ -1,5 +1,7 @@
 .modal-dialog {
-    transform: translate(0, 10%) !important;
+    transform: translate(0, 0) !important;
+    top: 0;
+    bottom: 0
 }
 
 .h4 {
